finimalism7.css
/* ... */
a[href*="music.apple.com"] {
	font-size: 0;
}

a[href*="musicbrainz.org"]::before {
	content: "";
	display: inline-block;
	width: 50px;
	height: 25px;
	background-image: url('https://i.imgur.com/xas4Jyq.png');
	background-size: contain;
	background-repeat: no-repeat;
	margin-right: 5px;
	vertical-align: middle;
}

a[href*="musicbrainz.org"] {
	font-size: 0;
}

a[href*="myanimelist.net"]::before {
	content: "";
	display: inline-block;
	width: 50px;
	height: 25px;
	background-image: url('https://i.imgur.com/atjS4Rn.png');
	background-size: contain;
	background-repeat: no-repeat;
	margin-right: 5px;
	vertical-align: middle;
}

a[href*="myanimelist.net"] {
	font-size: 0;
}

a[href*="kinopoisk.ru"]::before {
	content: "";
	display: inline-block;
	width: 50px;
	height: 25px;
	background-image: url('https://i.imgur.com/IgsO8OO.png');
	background-size: contain;
	background-repeat: no-repeat;
	margin-right: 5px;
	vertical-align: middle;
}

a[href*="kinopoisk.ru"] {
	font-size: 0;
}

a[href*="shokoanime.com"]::before {
	content: "";
	display: inline-block;
	width: 50px;
	height: 25px;
	background-image: url('https://i.imgur.com/lNedr1W.png');
	background-size: contain;
	background-repeat: no-repeat;
	margin-right: 5px;
	vertical-align: middle;
}

a[href*="shokoanime.com"] {
	font-size: 0;
}

.itemExternalLinks.focuscontainer-x {
	color: #000a;
}

.layout-desktop .mainDetailButtons.focuscontainer-x,
.layout-tv .mainDetailButtons.focuscontainer-x {
	position: fixed;
	left: 4.15em;
	width: 16.7em;
	justify-content: space-evenly;
	top: 14.62em;
	z-index: -1;
	background: #0c0515c2;
	border-top-right-radius: 1em;
	margin: 1.25em 0;
	padding-top: 12em;
	border-top-left-radius: 1em;
}

.layout-desktop .cardPadder,
.layout-tv .cardPadder {
	border-radius: unset;
}

.layout-desktop .itemExternalLinks.focuscontainer-x,
.layout-tv .itemExternalLinks.focuscontainer-x {
	color: #000a;
	position: fixed;
	width: 21.6em;
	left: 5.5em;
	top: 56.5em;
}

.layout-desktop .mainDetailButtons.focuscontainer-x .button-flat,
.layout-tv .mainDetailButtons.focuscontainer-x .button-flat {
	margin-right: 0em !important;
	padding: 0.5em !important;
	z-index: 5;
	border-radius: 0.26em !important;
}

.layout-desktop .mainDetailButtons.focuscontainer-x .button-flat:hover,
.layout-tv .mainDetailButtons.focuscontainer-x .button-flat:focus {
	background: #29264a !important;
}

/* D-E-N-U's title fix */ 
.layout-desktop .itemName.infoText.parentNameLast,
.layout-desktop .itemName.infoText.subtitle,
.layout-tv .itemName.infoText.subtitle,
.layout-tv .itemName.infoText.parentNameLast {
	display: -webkit-box !important;
	-webkit-box-orient: vertical;
	-webkit-line-clamp: 2;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: normal;
	filter: drop-shadow(-2px 4px 1px #0005);
}

.layout-desktop .itemName.infoText.originalTitle,
.layout-desktop .itemName.infoText.subtitle,
.layout-tv .itemName.infoText.originalTitle {
	position: absolute;
	top: 5.5em;
	left: 0em;
	font-size: 1.1em;
	width: 29em;
}

.layout-desktop [dir="ltr"] .selectArrowContainer,
.layout-tv [dir="ltr"] .selectArrowContainer {
  right: 3em;
}

.layout-desktop #itemDetailPage .nameContainer .parentName.focuscontainer-x .button-link.itemAction.emby-button,
.layout-tv #itemDetailPage .nameContainer .parentName.focuscontainer-x .button-link.itemAction.emby-button {
	display: -webkit-box !important;
	-webkit-box-orient: vertical;
	-webkit-line-clamp: 2;
	overflow: hidden;
	text-overflow: ellipsis;
	transition: transform 0s;
}

.layout-tv #itemDetailPage .detailImageContainer.padded-left .card:hover {
	transform: scale(1) translateY(-50%);
}

.layout-desktop #itemDetailPage .detailImageContainer.padded-left .card:hover {
	transform: scale(1);
}

.layout-desktop #itemDetailPage .nextUpItems .card.overflowBackdropCard.card-hoverable.card-withuserdata,
.layout-tv #itemDetailPage .nextUpItems .card.overflowBackdropCard.card-hoverable.card-withuserdata {
	width: 28.15em !important;
}

.alphaPickerButton:hover {
	color: rgba(255, 255, 255, 0.75);
}

.mainDrawer.transition.touch-menu-la.drawer-open {
	min-width: 20em;
	font-size: 89%;
}

.layout-desktop .subtitleSync,
.layout-tv .subtitleSync {
	position: absolute;
	width: 100%;
	margin-top: 4em;
}

.layout-mobile .subtitleSync {
	margin-top: 2em;
} 

.layout-desktop .musicParentName,
.layout-tv .musicParentName {
	position: absolute;
	top: 4.75em;
	width: 22em;
}

/*.dialogContainer .listItem:hover .listItemBody {
	color: #fff;
}*/

.subtitleResults .listItem:hover .listItemBody {
	color: #fff !important;
}

.subtitleList .listItem:hover .listItemBody {
	color: #fff !important;
}

.subtitleResults .listItem:hover .listItemBodyText {
  color: #fff;
}

.subtitleList .listItem:hover .secondary.listItemBodyText,
.subtitleList .listItem.listItem-border:hover .secondary.listItemBodyText {
        color: #fffa !important;
}

.actionSheetScroller .listItem.listItem-button:hover .listItemBodyText {
        color: #000;
}

.layout-desktop .focuscontainer.dialog.formDialog.dialog-fullscreen-lowres.centeredDialog.opened,
.layout-tv .focuscontainer.dialog.formDialog.dialog-fullscreen-lowres.centeredDialog.opened {
	min-height: 50vh;
	max-height: 100vh;
}

.layout-desktop #songsTab .itemsContainer.vertical-list {
	max-width: 80vw !important;
}

.layout-desktop #songsTab .itemsContainer.vertical-list .listItemBody.itemAction {
	min-width: 38vw;
}

#nowPlayingPage .remoteControlContent.padded-left.padded-right.padded-bottom.hideVideoButtons::before {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #0F031F91;
  z-index: 0;
}

.content-primary {
	padding-bottom: 5em !important;
}

.localUsers .cardText-secondary {
  height: auto;
  white-space: pre-wrap;
}
@media (min-width: 70em) {
	.localUsers .squareCard {
		width: 15%;
	}
}

@media (max-width: 70em) {
	.localUsers .squareCard {
		width: 33%;
	}
}
/* ... */

